[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/ObjectLayers/TorsoLayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/BodyParts/scripts/BodyPart.gd" type="Script" id=2]
[ext_resource path="res://resources/BodyPartResource.gd" type="Script" id=3]

[sub_resource type="Resource" id=1]
script = ExtResource( 3 )

[node name="BodyPart" type="Node2D"]
script = ExtResource( 2 )
bodypart_parameters = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
centered = false

[node name="TopLayer" parent="." instance=ExtResource( 1 )]

[node name="MiddleLayer" parent="." instance=ExtResource( 1 )]

[node name="BottomLayer" parent="." instance=ExtResource( 1 )]
